[gd_scene load_steps=4 format=2]

[ext_resource path="res://Resources/Graphics/Characters/Boshy/Projectiles/blue_beam.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Characters/BoshyCharacters/Projectiles/BlueBeam.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 416 )

[node name="BlueBeam" type="Area2D"]
collision_layer = 16
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 416 )
scale = Vector2( 1, 104 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 416 )
scale = Vector2( 1, 0.01 )
shape = SubResource( 1 )

[node name="DeathTimer" type="Timer" parent="."]
autostart = true

[node name="SpriteTween" type="Tween" parent="."]

[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="tween_all_completed" from="SpriteTween" to="." method="_on_SpriteTween_tween_all_completed"]
